--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "time-tracker-console-app-csharp"]
 	path = time-tracker-console-app-csharp
 	url = https://github.com/Cecilia-Coutinho/time-tracker-console-app-csharp.git
+[submodule "csharp-code-samples"]
+	path = csharp-code-samples
+	url = https://github.com/Cecilia-Coutinho/csharp-code-samples.git
